# terraform-ai-guardian

./: .gitignore  .tf-guardian.yml  Dockerfile  LICENSE  README.md  action.yaml  pyproject.toml  standards.yaml
.github/workflows/: ci.yaml  drift-detection.yaml  example-usage.yaml  multi-account-scan.yaml  terraform-plan-review.yaml
demo/: OUTPUT.md  README.md  run_demo.sh
policies/: terraform.rego
src/guardian/: __init__.py  main.py  parser.py
src/guardian/ai/: analyzer.py
src/guardian/drift/: __init__.py  analyzer.py  cli.py
src/guardian/policy/: opa.py
src/guardian/reporter/: github.py  slack.py
src/guardian/rules/: cost.py  infracost.py  security.py  standards.py
tests/: test_cost_estimator.py  test_drift_analyzer.py  test_security_rules.py  test_slack_reporter.py  test_standards.py
tests/fixtures/: plan_clean.json  plan_standards_violations.json  plan_with_violations.json
